--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -2,7 +2,7 @@
 
 ## 📝 Your Notes
 
-Elaborate on your learnings here in `src/exercise/04.md`
+I had to use `react-virtualized-auto-sizer` in ECO. I wonder if `react-virtual` would have been easier to setup.
 
 > NOTE: We're going to be using a library called `react-virtual`. Some of you
 > may have used this before and others may not have used it or anything else
