--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -4,6 +4,9 @@
 
 Elaborate on your learnings here in `src/exercise/01.md`
 
+Is code splitting really that easy? Why don't we use it in ECO? For example, to have the landing page load faster.
+Would it be in this file? https://github.com/nulogy/eco/blob/9e43950c1e147f8252405ac7cf9d8fc2e43101e7/client/src/app/Routes.jsx
+
 ## Background
 
 Code splitting acts on the principle that loading less code will speed up your
