--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -4,6 +4,8 @@
 
 Elaborate on your learnings here in `src/exercise/02.md`
 
+I wonder if we don't use Web Workers as much because we usually paginate long list at the backend, so our "Worker" is the backend. Only when the list is static, we get the benefit from using "Worker"?
+
 ## Background
 
 React hooks are amazing. Being able to put all the logic and state management
