--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -4,6 +4,8 @@
 
 Elaborate on your learnings here in `src/exercise/03.md`
 
+Why is cody asking to memoize the Menu if it doesn't make a difference? Why we don't see a difference when memoizing the Menu?
+
 ## Background
 
 Here's the lifecycle of a React app:
