--- a/src/exercise/05.md
+++ b/src/exercise/05.md
@@ -4,6 +4,8 @@
 
 Elaborate on your learnings here in `src/exercise/05.md`
 
+What's are good ways of visualizing React code? For example, we use UML Class and Sequence diagrams for OOP, how about React code? What visualization could help us explain and see options for refactoring?
+
 ## Background
 
 The way that context works is that whenever the provided value changes from one
