--- a/src/exercise/06.md
+++ b/src/exercise/06.md
@@ -4,6 +4,8 @@
 
 Elaborate on your learnings here in `src/exercise/06.md`
 
+In credit 2, memorizing Cell didn't improve performance at all.
+
 ## Background
 
 When you're building a sizable real-world application, you're typically going to
