--- a/src/exercise/06.md
+++ b/src/exercise/06.md
@@ -5,6 +5,7 @@
 Elaborate on your learnings here in `src/exercise/06.md`
 
 In credit 2, memorizing Cell didn't improve performance at all.
+The useRecoil video showing performance comparison is comparing 6x vs no throttling
 
 ## Background
 
