finishes react performance

--- a/src/exercise/07.md
+++ b/src/exercise/07.md
@@ -4,6 +4,13 @@
 
 Elaborate on your learnings here in `src/exercise/07.md`
 
+> User complaints is not a great policy for quality
+control.
+
+Is the idea to have many Profilers all around the app to profile individual components?
+
+My React profiler does not show "Profiled interactions". Anyone else?
+
 ## Background
 
 We should always ship fast experiences to our users, but sometimes something
